--- a/frontend/src/Countries.scss
+++ b/frontend/src/Countries.scss
@@ -7,20 +7,22 @@ $font-family_1: "Poppins", sans-serif;
 .countries-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    height: 100vh;
     h2 {
         font-style: normal;
         font-weight: 700;
         font-size: 40px;
         line-height: 48px;
-        margin-bottom: 48px;
+        margin: 40px 0 24px 0;
     }
     p {
         font-style: normal;
         font-weight: 700;
         font-size: 30px;
         line-height: 24px;
+        margin-bottom: 32px;
     }
 
 .country-card {
@@ -31,6 +33,7 @@ $font-family_1: "Poppins", sans-serif;
     scroll-snap-type: x mandatory;
     border-radius: 16px;
     scroll-behavior: smooth;
+    margin: 24px 0;
 
 
 
