--- a/frontend/src/Countries.scss
+++ b/frontend/src/Countries.scss
@@ -37,18 +37,18 @@ $font-family_1: "Poppins", sans-serif;
 
 
 
-    img{
-    width: 300px;
+    div{
+    min-width: 300px;
     height: 470px;
     margin-right: 16px;
     border-radius: 15px;
     scroll-snap-align: center;
+    background-size: cover;
 
     }
 }
 .btn-match {
     display: flex;
-    width: 50%;
     justify-content: space-between;
     .pass {
         border-radius: 50%;
@@ -73,24 +73,14 @@ a {
     all: unset;
 }
 button {
-    all: unset;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 16px;
-    gap: 10px;
-    width: 103px;
-    height: 30px;
-    background: #539DF3;
-    border-radius: 100px;
-    color: white;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
-    position: absolute;
-    right: 16px;
-    bottom: 16px;
+        border-radius: 50%;
+        border: 1px solid black;
+        width: 60px;
+        height: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 16px;
+        background-color:rgb(146, 186, 227);
 }
 }
