--- a/frontend/src/Region.scss
+++ b/frontend/src/Region.scss
@@ -24,17 +24,15 @@
     height: 170px;
     display: flex;
     padding: 5px;
-    margin: 15px 0px 10px 0px;
-    border-radius: 40px;        
+    margin: 8px;
+    border-radius: 40px;  
+    object-fit: cover;
+          
     }
 
-    // .regionImg:hover {
-    //    border:1px solid red;
-    // }
-
+    
     .container1{
     display: flex;
-    // flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     flex-direction: column;
