--- a/frontend/src/Countries.scss
+++ b/frontend/src/Countries.scss
@@ -35,6 +35,10 @@ $font-family_1: "Poppins", sans-serif;
     scroll-behavior: smooth;
     margin: 24px 0;
 
+    p {
+        text-align: center;
+    }
+
 
 
     div{
@@ -44,6 +48,7 @@ $font-family_1: "Poppins", sans-serif;
     border-radius: 15px;
     scroll-snap-align: center;
     background-size: cover;
+    background-position: center
 
     }
 }
@@ -81,6 +86,14 @@ button {
         justify-content: center;
         align-items: center;
         margin: 0 16px;
-        background-color:rgb(146, 186, 227);
+        background-color:rgba(180, 200, 221, 0.628);
+        color: white;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        padding: 4px;
+        img {
+            width: 60%;
+        }
 }
 }
