--- a/frontend/src/Home.scss
+++ b/frontend/src/Home.scss
@@ -10,14 +10,26 @@ $background-color_2: #539DF3;
 	padding: 0;
 	font-family: $font-family_1;
 }
-h1 {
-	text-align: center;
+.home-title {
+	position: relative;
 	font-size: 40px;
 	line-height: 48px;
-	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	margin-bottom: 50px;
 	margin-top: 10px;
-	font-weight: 500;
+	font-weight: 700;
+	width: 60%;
+	margin: 24px auto;
+	height: 100px;
+	span:first-of-type {
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	span:last-of-type {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+	}
 }
 .imgHome {
 	background-image: url(./assets/maldives.jpg);
