--- a/frontend/src/Region.scss
+++ b/frontend/src/Region.scss
@@ -15,7 +15,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 15px 15px 0px 15px;
+    margin: 32px 15px 0px 15px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 48px;
     .h5{
         font-weight:200;
     }
@@ -27,7 +30,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    min-height: 90vh;
+    min-height: 80vh;
     margin: 0px 10px 10px 10px;
 
     .regionImg{                
@@ -52,11 +55,12 @@
 
 
     .ExploreBtn{
-        background-color:  #539DF3;
+        background-color:  #000000;
         color: white;
         padding: 5px;
-        width: 100px;
-        border-radius: 10px;
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
         position: fixed; 
         right: 10%;  
         bottom:5%;     
