--- a/frontend/src/listCountries.css
+++ b/frontend/src/listCountries.css
@@ -1,19 +1,53 @@
 h1 {
     text-align: center;
-    margin-bottom: 30px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    margin: 40px 0 24px 0;
+}
 
+.favpictures {
+    position: relative;
 }
 .favpictures >img {
     position: relative;
     display: flex;
-    margin: 0 auto;
+    margin: 16px auto;
     border-radius: 20px;
 }
 .favpictures p {
     display: flex;
-    background-color: rgba(159, 174, 187, 0.72);
+    color: white;
     text-align: center;
     position: absolute;
-    top: 250px;
-    left: 150px;
+    bottom: 16px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 48px;
+
+}
+
+.go-back {
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+.go-back img {
+    width: 40%;
+}
+
+.favourites {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
