--- a/frontend/src/Home.scss
+++ b/frontend/src/Home.scss
@@ -18,8 +18,11 @@ $background-color_2: #539DF3;
 	margin-top: 10px;
 	font-weight: 700;
 	width: 60%;
-	margin: 24px auto;
+	margin: 32px auto;
 	height: 100px;
+	span::first-letter {
+		color: #539DF3;
+	}
 	span:first-of-type {
 		position: absolute;
 		top: 0;
@@ -31,18 +34,15 @@ $background-color_2: #539DF3;
 		bottom: 0;
 	}
 }
-.imgHome {
-	background-image: url(./assets/maldives.jpg);
-	background-position: center;
-	background-size: cover;
+.homepage {
+	background-image: url(./assets/TRAVEL.png);
+	background-position: top;
 	background-repeat: no-repeat;
-	width: 80%;
-	height: 60vh;
-	margin: 0 auto;
-	border-radius: 40px;
+	width: 100%;
+	height: 100vh;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
-	box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.25);
 	p {
 		font-size: 18px;
 		font-weight: 300;
@@ -53,6 +53,11 @@ $background-color_2: #539DF3;
 		height: 50%;
 		margin: 0 auto;
 		line-height: 1.4;
+	}
+	h2 {
+		font-weight: 500;
+		font-size: 30px;
+		line-height: 36px;
 	}
 }
 .start {
