--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -18,4 +18,14 @@ body {
   }
 
   
-
+.details {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+  p {
+    font-style: normal;
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 48px;
+  }
+}
